# particles

./: CMakeLists.txt
assets/shaders/: 2d.frag.glsl  2d.vert.glsl  3d.frag.glsl  3d.vert.glsl  blinn.frag.glsl  blinn.vert.glsl  lambert.frag.glsl  unlit.frag.glsl  unlit.vert.glsl
include/: DemoWindow.h  Shader.h  ShaderProgram.h  Window.h  glutils.h
include/framework/: Buffer.h  Camera.h  Entity.h  Framework.h  Geometry.h  GlNamedResource.h  GlResource.h  InstancedMesh.h  Light.h  Material.h  MaterialUniform.h  MatrixBuffer.h  MatrixUniform.h  Mesh.h  Particle.h  Renderer.h  Resource.h  Scene.h  Shader.h  ShaderProgram.h  SolidMaterialRenderer.h  StaticMesh.h  Texture.h  Transform.h  Uniforms.h  Window.h  Wireframe.h  WireframeRenderer.h
shaders/: frag.glsl  vert.glsl
src/: DemoWindow.cpp  GLResource.cpp  Shader.cpp  ShaderProgram.cpp  Window.cpp  glutils.cpp  main.cpp
src/framework/: Shader.cpp  ShaderProgram.cpp  Window.cpp
